<?xml version="1.0" encoding="utf-8"?>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation= "vertical">

  		<TableLayout
  		    android:layout_width="match_parent"
  		    android:layout_height="wrap_content" >

  		    <TableRow
  		        android:id="@+id/tableRow1"
  		        android:layout_width="wrap_content"
  		        android:layout_height="wrap_content" >

  		        <TextView
  		            android:layout_width="wrap_content"
  		            android:layout_height="wrap_content"
  		            android:text="@string/name"
  		            android:textStyle="bold" />

  		        <EditText
  		            android:id="@+id/nameString"
  		            android:layout_width="match_parent"
  		            android:layout_height="wrap_content"
  		            android:layout_weight="1"
  		            android:ems="10" >
                
  		            <requestFocus />

  		        </EditText>

  		    </TableRow>

  		    <TableRow
  		        android:id="@+id/tableRow2"
  		        android:layout_width="wrap_content"
  		        android:layout_height="wrap_content" >

  		        <TextView
  		            android:layout_width="wrap_content"
  		            android:layout_height="wrap_content"
  		            android:text="@string/surname1"
  		            android:textStyle="bold" />

  		        <EditText
  		            android:id="@+id/surname1String"
  		            android:layout_width="match_parent"
  		            android:layout_height="wrap_content"
  		            android:layout_weight="1"
  		            android:ems="10" />

  		    </TableRow>

  		    <TableRow
  		        android:id="@+id/tableRow3"
  		        android:layout_width="wrap_content"
  		        android:layout_height="wrap_content" >

  		        <TextView
  		            android:layout_width="wrap_content"
  		            android:layout_height="wrap_content"
  		            android:text="@string/surname2"
  		            android:textStyle="bold" />

  		        <EditText
  		            android:id="@+id/surname2String"
  		            android:layout_width="match_parent"
  		            android:layout_height="wrap_content"
  		            android:layout_weight="1"
  		            android:ems="10" />

  		    </TableRow>

  		    <TableRow
  		        android:id="@+id/tableRow4"
  		        android:layout_width="wrap_content"
  		        android:layout_height="wrap_content" >
  		    </TableRow>
  		</TableLayout>


  		<LinearLayout
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content" >
		
		     <Button
		         android:id="@+id/cancel"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/cancel" />

		     <Button
		         android:id="@+id/reset"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/reset" />
		     		
		     <Button
		         android:id="@+id/ok"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/ok" />
		
		</LinearLayout>


	</LinearLayout>
